feat(projects): update background

--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -27,7 +27,6 @@
   &_item:hover {
     border-radius: 12px;
     cursor: pointer;
-    background: white;
-    color: black;
+    background: rgb(32, 32, 32);
   }
 }
